# CVxVacancyMatcher

./: .gitignore  LICENSE  README.md  notebook.ipynb  pyproject.toml  requirements.txt  swagger_spec.yaml
api/: main.py  nlp_model.py  requirements.txt
experiments/: NER.ipynb  QAmodels.ipynb  bertopic_inference.ipynb  berttopic.ipynb  embeddings.ipynb  keywords.ipynb  requirements.txt
web_app/: app.py  requirements.txt
